# codeassistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_FILE_AGENT.md  README_SUPPORT.md  docker-compose.yml  pyproject.toml  requirements.txt
assistant/: __main__.py  config.py  eval_runner.py
assistant/cli/: chat.py
assistant/core/: embeddings.py  llm.py  mcp_client.py  metrics.py  pipeline.py  rag.py  tools.py
assistant/indexer/: chunker.py  code_chunker.py  index.py
assistant/mcp_server/: repo_tools.py  server.py
data/support/: faq.md  product_guide.md  tickets.json  users.json
docker/: entrypoint.sh
docs/: DEMO_FILE_AGENT.md
docs/superpowers/plans/: 2026-07-17-telegram-support-bot.md
docs/superpowers/specs/: 2026-07-17-telegram-support-bot-design.md
eval/: questions.yaml
file_agent/: __init__.py  __main__.py  agent.py  tools.py
mcp_crm/: crm_store.py  server.py
support_assistant/: chat.py  index_support_kb.py
support_bot/: __init__.py  binding.py  bot.py  crm.py  handlers.py
tests/: test_chunker.py  test_code_chunker.py  test_config_telegram.py  test_crm_store.py  test_executor.py  test_file_agent_loop.py  test_file_agent_tools.py  test_indexer.py  test_llm_rag_api.py  test_metrics.py  test_repo_tools.py  test_support_bot_binding.py  test_support_bot_crm.py  test_support_bot_handlers.py  test_support_chat_graceful.py  test_support_context.py
