[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeassistant"
version = "0.2.0"
description = "RAG assistant over the Element Android docs and codebase"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "rich>=13.7",
    "PyYAML>=6.0",
]

# The MCP server, the REPL and the Telegram bot are not needed to index or
# to review a PR; keeping them out shaves a chunk off CI install time.
[project.optional-dependencies]
mcp = ["mcp>=1.2", "prompt_toolkit>=3.0"]
bot = ["aiogram>=3.13"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
codeassistant = "assistant.__main__:main"

[tool.setuptools.packages.find]
include = ["assistant*", "mcp_crm*", "support_assistant*", "support_bot*"]
